<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#CEBAF6"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dog_breed_details_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:title="@string/dog_breeds_title"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingTop="8dp"
        android:text="@string/dog_name"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dog_breed_details_toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageViewCard"
        android:layout_width="330dp"
        android:layout_height="330dp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/dog_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        app:cardElevation="4dp">
        <ImageView
            android:id="@+id/imageViewDog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/dog_name"
            android:src="@drawable/dogprofile"
            android:scaleType="centerCrop"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/dogOrigin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:paddingTop="4dp"
        android:text="@string/dog_breed_group"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCard" />


    <!-- Temperament -->
    <TextView
        android:id="@+id/dogTemperament"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:paddingTop="4dp"
        android:text="@string/dog_temperament"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dogOrigin" />

    <!-- Life Span -->
    <TextView
        android:id="@+id/dogBestSuits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:paddingTop="4dp"
        android:text="@string/dog_life_span"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dogTemperament" />

</androidx.constraintlayout.widget.ConstraintLayout>